Fixed visibility throught menu bachground issue

--- a/styles.css/header.css
+++ b/styles.css/header.css
@@ -37,6 +37,7 @@
   gap: 32px;
   transform: translateX(100%);
   transition: transform 0.3s ease-in-out;
+  z-index: 1000;
 }
 
 .mobile-menu.active {
